--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
-1.31_7 Wed Oct 29 21:21:21 UTC 2003
+1.31_8 Mon Nov 10 03:35:36 UTC 2003
+	- $dbh->{TYPE} now returns SQL_TYPE_TIMESTAMP instead of 1114 for 
+	  timestamp columns.  (In 1.31_x {x| x<8} $sth->{TYPE} returned 0
+	  but reported by ["Hirche, Joachim" <Joachim.Hirche@cimconcepts.com>]).
 	- Raised required versions to Perl 5.6.1 and DBI 1.35
 	- Fix syntax error related to pg_server_version (CPAN bugs #2492 and #2755)
 	- Cache multiple calls to pg_server_version.
