--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-1.31_9 Fri Nov 14 20:34:20 UTC 2003
+1.31 Mon Nov 17 21:21:21 UTC 2003
 	- $dbh->{TYPE} now returns SQL_TYPE_TIMESTAMP instead of 1114 for 
 	  timestamp columns.  (In 1.31_x {x| x<8} $sth->{TYPE} returned 0
 	  but reported by ["Hirche, Joachim" <Joachim.Hirche@cimconcepts.com>]).
