The chopblanks stuff in dbdimp.c forgot to check whether type_info was defined before derefing, so any type that that did not have an associated type_info array entry would segfault on fetch.

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+	- a fetch on any column that had a type that did not have an entry
+	  in the type_info array would segfault DBD::Pg.  [reported by: TODO]
+
 1.31 Mon Nov 17 21:21:21 UTC 2003
 	- $dbh->{TYPE} now returns SQL_TYPE_TIMESTAMP instead of 1114 for 
 	  timestamp columns.  (In 1.31_x {x| x<8} $sth->{TYPE} returned 0
