--- a/Changes
+++ b/Changes
@@ -3,6 +3,8 @@
 	- Duplicate rows bug with column_info() REMARKS has been fixed. However,
 	  support for Postgres 7.1.x which worked briefly for 1.31 has now been
 	  dropped for this feature. (Mark Stosberg)
+    - Bumped required Perl version to 5.6.1 in Makefile.PL. We were already
+      already requiring for Pg.pm since 1.31.
 
 1.31 Mon Nov 17 21:21:21 UTC 2003
 	- $dbh->{TYPE} now returns SQL_TYPE_TIMESTAMP instead of 1114 for 
