Mention that spaces as well as semicolons can be escaped in the connection string.

--- a/README
+++ b/README
@@ -100,7 +100,8 @@ to the DBI_DSN variable like this:
 
 	DBI_DSN='dbi:Pg:dbname=<database>;port=<port#>'
 
-Put double quotes around the dbname if it has a semicolon in it:
+Put double quotes around the dbname if it has a semicolon 
+or a space inside of it:
 
 	DBI_DSN='dbi:Pg:dbname="<data;base>"'
 
