Rewrote the primary_key_info() and primary_key() methods to support multiple-column keys. Also added a "onerow" option to allow returning a single row with columns in a string (like psql) as well as as an arrayref (for easy parsing).

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+  - Rewrote the primary_key_info() and primary_key() methods to 
+    cleanly handle multi-column primary keys. Also added a "onerow" 
+    attribute to allow primary_key_info() to return a single 
+    row containing multiple-column information.
   - Switched commit behavior from commit->execute->begin 
 		to begin->execute->commit
 		[xelah-junk@xelah.com]
