Mention foreign_key_info change.

--- a/Changes
+++ b/Changes
@@ -1,8 +1,10 @@
 1.32_1 Fri Feb 13 16:46:48 UTC 2004
+	- Rewrote the foreign_key_info() method to handle 
+		multi-column keys. [Greg Sabino Mullane]
 	- Rewrote the primary_key_info() and primary_key() methods to 
-	    cleanly handle multi-column primary keys. Also added a "onerow" 
-	    attribute to allow primary_key_info() to return a single 
-	    row containing multiple-column information.
+		cleanly handle multi-column primary keys. Also added a "onerow" 
+		attribute to allow primary_key_info() to return a single 
+		row containing multiple-column information. [Greg Sabino Mullane]
 	- Switched commit behavior from commit->execute->begin 
 		to begin->execute->commit
 		[xelah-junk@xelah.com]
