--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-1.32_2 Thu Feb 19 02:33:24 UTC 2004
+1.32 Wed Feb 25 18:24:18 UTC 2004
 	- Bugfix for memory allocation problems on win systems
 		[Rafael Kitover <caelum@debian.org>]
 	- Rewrote the foreign_key_info() method to handle 
