--- a/README
+++ b/README
@@ -18,6 +18,7 @@ For information about PostgreSQL, visit:
 
 	http://www.postgresql.org/
 
+
 COPYRIGHT:
 ----------
 
@@ -33,26 +34,22 @@ License or the Artistic License, as specified in the Perl README file.
 HOW TO GET THE LATEST VERSION:
 ------------------------------
 
-Use the following URL to look for new versions of this module: 
-
-	http://gborg.postgresql.org/project/dbdpg/projdisplay.php
-
-or
+Use the following URLs to look for new versions of this module: 
 
 	http://www.perl.com/CPAN/modules/by-module/DBD/
+	http://gborg.postgresql.org/project/dbdpg/projdisplay.php
 
-Note that this request will be redirected automatically to the 
-nearest CPAN site.
+Note that the former will redirect you to the nearest CPAN site.
 
 
-IF YOU HAVE PROBLEMS:
----------------------
+IF YOU HAVE PROBLEMS OR COMMENTS:
+---------------------------------
 
-Please send comments and bug-reports to <dbdpg-general@gborg.postgresql.org>
+Please send any problems, comments and bug reports to 
+<dbdpg-general@gborg.postgresql.org>
 
-Please include the output of perl -v and perl -V, the version of PostgreSQL,
-the version of DBD-Pg, the version of DBI, and details about your platform
-in your bug-report.
+Please include details about your platform, and your version of 
+perl, PostgreSQL, DBI, and DBD-PG in your bug report.
 
 
 REQUIREMENTS:
@@ -63,14 +60,15 @@ REQUIREMENTS:
 	build, test, and install PostgreSQL     (at least 7.2)
 	build, test, and install Test::Simple   (at least 0.30)
 
+
 INSTALLATION:
 -------------
 
-By default Makefile.PL uses App:Info to find the location of the
+By default Makefile.PL uses App::Info to find the location of the
 PostgreSQL library and include directories.  However, if you want to
 control it yourself, define the environment variables POSTGRES_INCLUDE 
-and POSTGRES_LIB, or POSTGRES_HOME. Note that if you've compiled
-PostgreSQL with SSL support, you must define the POSTGRES_LIB
+and POSTGRES_LIB, or define just POSTGRES_HOME. Note that if you have 
+compiled PostgreSQL with SSL support, you must define the POSTGRES_LIB
 environment variable and add "-lssl" to it, like this:
 
 	export POSTGRES_LIB="/usr/local/pgsql/lib -lssl"
@@ -82,7 +80,7 @@ Now, take the usual steps to install DBD::Pg:
 	3.   make test
 	4.   make install
 
-Do steps 1 to 3 as normal user, not as root!
+Do steps 1 to 3 as a normal user, not as root!
 
 
 TESTING:
@@ -109,6 +107,21 @@ The tests assume that a schema named "public" is available for
 7.3 and greater servers. To override this, set the environment 
 variable DBD_SCHEMA to a valid schema before testing.
 
+You can increase the verbosity of the tests by setting the 
+environment variable TEST_VERBOSE. You can also enable tracing 
+within the tests themselves by setting DBD_TRACE to whatever 
+trace level you want. Be aware that setting the trace level can 
+result in extremely verbose output.
+
+When reporting test failures, please use TEST_VERBOSE=1, do *not* 
+set DBD_TRACE unless requested, and send only the relevant sections.
+
+
+TROUBLESHOOTING:
+----------------
+
+* PostgreSQL library issues:
+
 If you are using the shared library libpq.so check if your dynamic
 loader finds libpq.so. With Linux the command /sbin/ldconfig -v should
 tell you where it finds libpq.so. If ldconfig does not find libpq.so,
@@ -131,7 +144,10 @@ build-time.  This should have caused 'make test' to fail; did you really
 run it and look at the output? Check the setting of POSTGRES_LIB and
 recompile DBD-Pg.
  
-Some linux distributions have incomplete perl installations.  If you have
+
+* Perl issues:
+
+Some Linux distributions have incomplete perl installations.  If you have
 compile errors like "XS_VERSION_BOOTCHECK undeclared", do:
 
 	find .../lib/perl5 -name XSUB.h -print
@@ -139,39 +155,58 @@ compile errors like "XS_VERSION_BOOTCHECK undeclared", do:
 If this file is not present, you need to recompile and re-install perl.
 
 
-SGI users: if you get segmentation faults make sure, you use the malloc
+If you get a message about "use of uninitialized value in -d" when doing 
+a "make install_vendor", you can work around this by adding a dummy value 
+to the INSTALLVENDORBIN environment variable:
+
+make install_vendor INSTALLVENDORBIN=/tmp
+(thanks to Peter Eisentraut <peter_e at gmx.net>)
+
+
+* SGI issues:
+
+If you get segmentation faults, make sure you are using the malloc
 which comes with perl when compiling perl (the default is not to).
-"David R. Noble" <drnoble@engsci.sandia.gov>
+(thanks to "David R. Noble" <drnoble at engsci.sandia.gov>)
 
 
-HP users: if you get error messages like:
+* HP issues:
+
+If you get error messages like:
 
 	can't open shared library: .../lib/libpq.sl
 	No such file or directory
 
 when running the test script, try to replace the 'shared' option in the
-LDDFLAGS with 'archive'.  Dan Lauterbach <danla@dimensional.com>
+LDDFLAGS with 'archive'.
+(thanks to Dan Lauterbach <danla at dimensional.com>)
 
 
-FreeBSD users: if you get during make test the error message:
+* FreeBSD issues:
+
+If you get during "make test" the error message:
 
 	'DBD driver has not implemented the AutoCommit attribute'
 
 recompile the DBI module and the DBD-Pg module and disable optimization.
 This error message is due to the broken optimization in gcc-2.7.2.1.
 
+
 If you get compiler errors like:
+
 	In function `XS_DBD__Pg__dr_discon_all_'
 	`sv_yes' undeclared (first use in this function)
 
-It may be because there is a 'patchlevel.h' file from another package 
+it may be because there is a 'patchlevel.h' file from another package 
 (such as 'hdf') in your POSTGRES_INCLUDE dir.  The presence of this file 
 prevents the compiler from finding the perl include file 
 'mach/CORE/patchlevel.h'.  Do 'pg_config --includedir' to identify the 
 POSTGRES_INCLUDE dir.  Rename patchlevel.h whilst you build DBD::Pg. 
 
 
-Sun Users: if you get compile errors like:
+* Sun issues:
+
+If you get compile errors like:
 
 	/usr/include/string.h:57: parse error before `]'
 
@@ -180,7 +215,9 @@ strerror, which clashes with the definition in the standard include
 file.
 
 
-Win32 Users: Running DBD-Pg scripts on Win32 needs some configuration work
+* Win32 issues:
+
+Running DBD-Pg scripts on Win32 needs some configuration work
 on the server side:
 
     o add a postgres user with the same name as the NT-User 
@@ -188,11 +225,18 @@ on the server side:
     o make sure, that your pg_hba.conf on the server is configured,
       such that a connection from another host will be accepted
 
-OS X Users: You may need to add "-lssl" and "-lcrypto" to your LIB 
-variable before compiling. <rob at cabrion dot com>
 
-SCO Users: If the 'make test' gives an error about a symbol not being 
-found, you can correct the problem by manually running ld after the 
+* OS X issues:
+
+You may need to add "-lssl" and "-lcrypto" to your LIB variable 
+before compiling.
+(thanks to <rob at cabrion dot com>)
+
+
+* SCO issues:
+
+If the 'make test' gives an error about a symbol not being found, 
+you can correct the problem by manually running ld after the 
 'make' command:
 
 LD_RUN_PATH="/usr/local/pgsql/lib" ld -G -L/usr/local/lib Pg.o \
@@ -200,5 +244,6 @@ dbdimp.o -o blib/arch/auto/DBD/Pg/Pg.so -L/usr/local/pgsql/lib -lpq \
 -L/opt/K/SKUNK2000/Gcc/2.95.2pl1/usr/local/lib/gcc-lib/i386-pc-sco3.2v5.0.5/2.95.2/ \
 -lgcc
 
-Once this is done, 'make test' succeeds properly. <jmore at remote-print.com>
+Once this is done, 'make test' succeeds properly.
+(thanks to <jmore at remote-print.com>)
 
