--- a/Changes
+++ b/Changes
@@ -3,16 +3,16 @@
 		[Greg Sabino Mullane]
 	- Minor fixes in quote.c, dbdimp.c, and types.h
 		[Christophe Martin: schplurtz at free.fr]
-	- Add support for SQLSTATE via $dbh->state()
+	- Add support for SQLSTATE via $dbh->state and $sth->state
 		[Greg Sabino Mullane]
 	- Major overhaul of prepare/execute to handle new server-side 
-		prepare system. [Greg Sabino Mullane]
+		prepare system. See Pg,pm for details. [Greg Sabino Mullane]
 	- Add DBD_TRACE to all tests for better debugging.
 	- Make the tests honor the DBD_SCHEMA variable instead of 
 		assuming that "public" is available.
 		[Rainer Weikusat]
-	- ddbimp.c cleanups: better error messages, ensure commit
-		is only called one after a transaction fails.
+	- dbdimp.c cleanups: better error messages, ensure commit
+		is only called once after a transaction fails.
 		[Alexey Slynko]
 	- primary_key() returns empty list not undef if no match.
 		[Julian Mehnle]
