--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+	- Add explicit support for types SQL_BOOLEAN, DATE, TIME, 
+		TIMESTAMP, and TIMESTAMPTZ. REturn correct values for 
+		DATEOID and TIMEOID. [Greg Sabino Mullane]
 	- Added tablespace support for table_info and primary_key_info.
 		[Greg Sabino Mullane]
 	- Add new attributes to $dbh: pg_db, pg_user, pg_pass,
