--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 1.40 
-	- Add $dbh->{pg_errorlevel}. [Greg Sabino Mullane]
+  - Added $dbh->func($filehandle, 'server_trace')
+		[Greg Sabino Mullane]
+	- Added $dbh->{pg_errorlevel}. [Greg Sabino Mullane]
 	- Fix utf8 quote() support [Dominic Mitchell <dom@semantico.com>]
 	- Add explicit support for types SQL_BOOLEAN, DATE, TIME, 
 		TIMESTAMP, and TIMESTAMPTZ. Return correct values for 
