Incremented version number for continued development. Added timestamp for 1.40 (d'oh!).

--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
-1.40 
+1.41
+
+1.40 Tue Feb 22 06:06:45 UTC 2005
   - Raise required DBI version to 1.38
 	- Execute returns 0 (0E0) not -1 for successful DDL commands.
 		[Robert Treat]
