--- a/README
+++ b/README
@@ -65,6 +65,12 @@ REQUIREMENTS:
 	build, test, and install PostgreSQL     (at least 7.2)
 	build, test, and install Test::Simple   (at least 0.30)
 
+You must also have the pg_config executable installed (to check, type 
+"which pg_config" on unix-like systems). If pg_config is not available, 
+then you need to install the development package for PostgreSQL. For example 
+on Debian: apt-get install postgresql-dev; on RedHat: yum postgresql-devel. 
+This development package is needed even if you already have PostgreSQL up 
+and running since DBD::Pg uses it for its installation.
 
 INSTALLATION:
 -------------
